updated code to include template ng error messages

--- a/src/app/demo/magical-field-error/magical-field-error.component.html
+++ b/src/app/demo/magical-field-error/magical-field-error.component.html
@@ -26,7 +26,7 @@
         <div *ngIf="lastNameError">
             <ng-error type='required'
                       for="lastName"
-                      message="First Name is required"></ng-error>
+                      message="Last Name is required"></ng-error>
             <ng-error type='minlength'
                       for="lastName"
                       message="Please enter min length"></ng-error>
